Fix scrollbar

--- a/styles/stylesheet.less
+++ b/styles/stylesheet.less
@@ -1,3 +1,18 @@
 @import "themes.less";
 @import "themes_v2.less";
 @import "custom.less";
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
